syntax = "proto3";

option java_multiple_files = true;

package my.project.gen.grpc;

// Style Guide: protobuf.dev/programming-guides/style/
service TestService {
    rpc GetMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string text = 1;
    optional string text2 = 2;
}

message MessageResponse {
    string message = 1;
}